--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
-version: "3"
+version: "3" # Specify the version of Docker Compose.
 
 services:
 
   rabbit_mq:
-    image: rabbitmq:3.10.7-management
-    container_name: rabbit_mq
-    hostname: rabbitmq
-    restart: always
+    image: rabbitmq:3.10.7-management # Use the RabbitMQ Docker image with the management plugin.
+    container_name: rabbit_mq # Assign a custom name to the RabbitMQ container.
+    hostname: rabbitmq # Set the hostname for the RabbitMQ container.
+    restart: always # Ensure that the container restarts automatically if it exits.
     ports:
-        - '15672:15672'
+        - '15672:15672' # Map the RabbitMQ management UI port to the host machine.
     volumes:
-      - rabbit_mqdata:/usr/share/rabbitmq/data
+      - rabbit_mqdata:/usr/share/rabbitmq/data # Create a volume for RabbitMQ data storage.
 
   producer:
-    build: producer
+    build: producer # Build the 'producer' service using the Dockerfile in the 'producer' directory.
     depends_on:
-        - rabbit_mq
+        - rabbit_mq # Specify that the 'producer' service depends on the 'rabbit_mq' service.
     environment:
-        AMQP_URL: 'amqp://rabbit_mq?connection_attempts=10&retry_delay=10'
+        AMQP_URL: 'amqp://rabbit_mq?connection_attempts=10&retry_delay=10' # Set the AMQP URL for the producer.
     volumes:
-      - ./producer:/usr/src/app/producer
+      - ./producer:/usr/src/app/producer # Mount the 'producer' code into the 'producer' service container.
 
 volumes:
     rabbit_mqdata:
-      driver: local
+      driver: local # Define a local volume named 'rabbit_mqdata'.
